feature add board member and delete member
